--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Instagram">
-        <activity android:name="Main.MainActivity">
+        <activity
+            android:name="Main.MainActivity"
+            android:theme="@style/Theme.Instagram">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +21,7 @@
         <activity android:name="RegisterPresentation.RegisterActivity" />
 
         <activity android:name="LoginPresentation.LoginActivity" />
+
     </application>
 
 </manifest>
