--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -11,16 +11,17 @@
         android:theme="@style/Theme.Instagram">
         <activity
             android:name="Main.MainActivity"
-            android:theme="@style/Theme.Instagram">
+            android:theme="@style/Theme.Instagram"/>
+
+        <activity android:name="RegisterPresentation.RegisterActivity" />
+
+        <activity android:name="LoginPresentation.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="RegisterPresentation.RegisterActivity" />
-
-        <activity android:name="LoginPresentation.LoginActivity" />
 
     </application>
 
