--- a/instagram/app/build.gradle
+++ b/instagram/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation 'com.github.CanHub:Android-Image-Cropper:3.1.3'
 
 
     testImplementation 'junit:junit:4.+'
