--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Instagram">
         <activity
-            android:name="Main.MainActivity"
+            android:name="Main.Presentation.MainActivity"
             android:theme="@style/Theme.Instagram" />
 
         <activity android:name="Register.presentation.RegisterActivity" />
