--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -17,26 +17,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name="Main.Camera.Presentation.AddCaptionActivity"
+            android:exported="true"
+            android:label="@string/photo"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
         <activity
             android:name="Main.Camera.Presentation.AddActivity"
             android:label="@string/photo"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name="Main.Presentation.MainActivity"
             android:theme="@style/AppTheme" />
-
         <activity android:name="Register.presentation.RegisterActivity" />
-
         <activity android:name="Login.Presentation.LoginActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <provider
