--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
-        android:name="android.hardware.camera.any"
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <application
@@ -20,6 +20,7 @@
         <activity
             android:name="Main.Camera.Presentation.AddCaptionActivity"
             android:exported="true"
+
             android:label="@string/photo"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
