--- a/instagram/app/src/main/AndroidManifest.xml
+++ b/instagram/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
-        android:name="android.hardware.camera"
+        android:name="android.hardware.camera.any"
         android:required="true" />
 
     <application
@@ -17,6 +17,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name="Main.Presentation.MainActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/serachable" />
+        </activity>
         <activity
             android:name="Main.Camera.Presentation.AddCaptionActivity"
             android:exported="true"
@@ -28,9 +43,6 @@
             android:name="Main.Camera.Presentation.AddActivity"
             android:label="@string/photo"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name="Main.Presentation.MainActivity"
             android:theme="@style/AppTheme" />
         <activity android:name="Register.presentation.RegisterActivity" />
         <activity android:name="Login.Presentation.LoginActivity">
